# ticky

./: CONTRIBUTING.md  Cargo.toml  NOTICE  README  SECURITY.md  crates.js  help.html  packit.yaml  rust-ticky.spec  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config
.github/workflows/: aarch64.yml  aur.yml  deb.yml  devskim.yml  fix_code.yml  format_code.yml  gh-pages.yml  lint_code.yml  mac-universal.yml  publish_crate.yml  rpm.yml  rust-clippy.yml  shiftleft_analysis.yml  tests.yml  update_deps.yml  windows.yml  x86_64.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Rem.js
implementors/core/ops/bit/: trait.Shl.js  trait.Shr.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/ticky/: lib.rs.html
ticky/: all.html  index.html  struct.Stopwatch.html
